Fix buttons alignment on mobile
closes #56

--- a/css/custom.css
+++ b/css/custom.css
@@ -368,7 +368,7 @@ button {
 }
 
 .pymatbtn {
-    padding: 0.6em 1.5em;
+    padding: 0.6em 1.2em;
     margin-left: 10px;
     margin-right: 10px;
     position: relative;
